# auth-py

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  README.rst  build_sync.py  conftest.py  pyproject.toml  release-please-config.json  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  conventional-commits.yml  manual_pypi_publish.yml  stale.yml
docs/source/: conf.py  index.rst
docs/source/api/: api.rst
docs/source/usage/: admin.rst  client.rst
gotrue/: .client.py.swp  .gitignore  __init__.py  api.py  client.py  constants.py  exceptions.py  helpers.py  http_clients.py  models.py  types.py  user.py  utils.py
gotrue/_async/: api.py  client.py  gotrue_admin_api.py  gotrue_admin_mfa_api.py  gotrue_base_api.py  gotrue_client.py  gotrue_mfa_api.py  storage.py
gotrue/_sync/: api.py  client.py  gotrue_admin_api.py  gotrue_admin_mfa_api.py  gotrue_base_api.py  gotrue_client.py  gotrue_mfa_api.py  storage.py
gotrue/common/: helpers.py  http_clients.py  types.py
gotrue/lib/: constants.py  helpers.py  storage.py  types.py
gotrue_py/: admin.py  client.py  user.py
infra/: docker-compose.yml
scripts/: gh-download.py
supabase_auth/: __init__.py  constants.py  errors.py  helpers.py  http_clients.py  timer.py  types.py  version.py
supabase_auth/_async/: gotrue_admin_api.py  gotrue_base_api.py  gotrue_client.py  storage.py
supabase_auth/_sync/: api.py  client.py  gotrue_admin_api.py  gotrue_base_api.py  gotrue_client.py  storage.py
tests/: test_client_with_autoconfirm_disabled.py  test_gotrue.py  test_helpers.py  test_placeholder.py  test_provider.py  test_subscriptions.py
tests/_async/: clients.py  test_api_with_auto_confirm_disabled.py  test_api_with_auto_confirm_enabled.py  test_client_with_auto_confirm_disabled.py  test_client_with_auto_confirm_enabled.py  test_client_with_sign_ups_disabled.py  test_gotrue.py  test_gotrue_admin_api.py  test_provider.py  test_subscriptions.py  test_utils.py  utils.py
tests/_sync/: clients.py  test_api_with_auto_confirm_disabled.py  test_api_with_auto_confirm_enabled.py  test_client_with_auto_confirm_disabled.py  test_client_with_auto_confirm_enabled.py  test_client_with_sign_ups_disabled.py  test_gotrue.py  test_gotrue_admin_api.py  test_provider.py  test_subscriptions.py  utils.py
