[tool.poetry]
name = "supabase_auth"
version = "2.11.3" # {x-release-please-version}
description = "Python Client Library for Supabase Auth"
authors = ["Joel Lee <joel@joellee.org>"]
homepage = "https://github.com/supabase/auth-py"
repository = "https://github.com/supabase/auth-py"
documentation = "https://github.com/supabase/auth-py"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.9"
httpx = {version = ">=0.26,<0.29", extras = ["http2"]}
pydantic = ">=1.10,<3"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"
black = "^25.1.0"
isort = "^6.0.0"
pre-commit = "^4.1.0"
pytest-cov = "^6.0.0"
pytest-depends = "^1.0.1"
pytest-asyncio = "^0.25.3"
Faker = "^35.0.0"
unasync-cli = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pygithub = ">=1.57,<3.0"
respx = ">=0.20.2,<0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
